--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,15 +13,25 @@
 # limitations under the License.
 ---
 - name: Check to see if pip is already installed.
-  command: "pip --version"
+  command: "pip --version || pip3 --version"
   ignore_errors: true
   changed_when: false # read-only task
   check_mode: no
   register: pip_is_installed
 
+- name: Setting python-pip as the package to install
+  set_fact:
+    pip_package: python-pip
+  when: ansible_distribution_major_version|int <= 7
+
+- name: Setting python3-pip as the package to install
+  set_fact:
+    pip_package: python3-pip
+  when: ansible_distribution_major_version|int >= 8
+
 - name: Install pip
   yum:
-    name: python-pip
+    name: "{{ pip_package }}"
     state: latest
     enablerepo: epel
   when: pip_is_installed.rc != 0
